--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.1",
     "autoprefixer": "^10.4.7",
+    "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "postcss": "^8.4.13",
     "react": "18.1.0",
@@ -26,6 +27,8 @@
     "@types/react-dom": "18.0.3",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "typescript": "4.6.4"
   }
 }
