--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "postcss": "^8.4.13",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "tmdb-ts": "^0.0.13"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
