--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.4.13",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "sharp": "^0.30.6",
     "tailwindcss": "^3.0.24",
     "tmdb-ts": "^0.0.13"
   },
