--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@tailwindcss/forms": "^0.5.1",
     "autoprefixer": "^10.4.7",
     "framer-motion": "^6.3.3",
+    "moviedb-promise": "^3.1.15",
     "next": "12.1.6",
     "postcss": "^8.4.13",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sharp": "^0.30.6",
-    "tailwindcss": "^3.0.24",
-    "tmdb-ts": "^0.0.13"
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
