--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sharp": "^0.30.6",
+    "swiper": "^8.2.2",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
