--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^6.3.3",
     "moviedb-promise": "^3.1.15",
     "next": "12.1.6",
+    "nextjs-progressbar": "^0.0.14",
     "postcss": "^8.4.13",
     "react": "18.1.0",
     "react-dom": "18.1.0",
