Edit workflow add TMDB_KEY

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,3 +60,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_movietime.outputs.tags }}
           labels: ${{ steps.meta_movietime.outputs.labels }}
+          build-args: |
+            TMDB_KEY=${{ secrets.TMDB_KEY }}
