--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.3",
     "@heroicons/react": "^1.0.6",
+    "@next/bundle-analyzer": "^12.1.6",
     "@tailwindcss/forms": "^0.5.1",
     "autoprefixer": "^10.4.7",
     "framer-motion": "^6.3.3",
